--- a/application/views/editProfileForm.html
+++ b/application/views/editProfileForm.html
@@ -35,6 +35,13 @@
         include 'seller_menu.html'; 
       }
     ?>
+    <?php
+	if($this->session->flashdata('message')) echo '
+		<script>
+			alert("'.$this->session->flashdata('message').'");
+		</script>
+		';
+?>
 	<!-- =======================================================================-->
 	<div id="myheaderwrap">
 		<div class="container">
@@ -91,7 +98,7 @@
 						
 						</div>
 						<div class="col-md-9">
-							<button type="submit" class="btn btn-default" >Cancel</button>
+							<button type="button" class="btn btn-default" >Cancel</button>
 							<button type="submit" class="btn btn-info" >Save</button>
 						</div>
 					</div>
