--- a/application/views/add_product.html
+++ b/application/views/add_product.html
@@ -27,7 +27,16 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+    
+    <script>
+      $(document).ready(function() {
+        $("#datepicker").datepicker();
+      });
+    </script>
+    
     <style>
       li.watchlist{
         margin-top: 30px;
@@ -35,17 +44,15 @@
       }
       
     </style>
-
-    <script type="text/javascript">
-      function bid(){
-          document.getElementById("update").innerHTML = "Starting price";
-      }
-      function direct(){
-          document.getElementById("update").innerHTML = "Price";
-      }
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+  
+    <script>
+      $(document).ready(function() {
+      $("#datepicker").datepicker();
+      });
     </script>
-    
-    
     
   </head>
 
@@ -83,7 +90,6 @@
       <div class="container">
         <div class="row centered">
             <h2>Want it that much ? Then <b>PAY</b> more. <b>-DumboBay-</b></h2> 
-            
         </div><!-- row -->
       </div><!-- container -->
     </div><!-- headerwrap -->
@@ -242,6 +248,17 @@
         </div><!-- row -->
       </div><!-- container -->
     </div><!-- Footer -->
+
+
+    <script type="text/javascript">
+      function bid(){
+          document.getElementById("update").innerHTML = "Starting price";
+      }
+      function direct(){
+          document.getElementById("update").innerHTML = "Price";
+      }
+    </script>
+    
 
 
     <!-- Bootstrap core JavaScript
