--- a/application/views/add_product.html
+++ b/application/views/add_product.html
@@ -11,32 +11,19 @@
     <title>DUMBOBAY - shopping area</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/dumbobaycss.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
 
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
-
-    <link rel="stylesheet" href="/resources/demos/style.css">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-    
-    <script>
-      $(document).ready(function() {
-        $("#datepicker").datepicker();
-      });
-    </script>
-    
     <style>
       li.watchlist{
         margin-top: 30px;
@@ -44,16 +31,6 @@
       }
       
     </style>
-    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-  
-    <script>
-      $(document).ready(function() {
-      $("#datepicker").datepicker();
-      });
-    </script>
-    
   </head>
 
   <body>
@@ -108,7 +85,9 @@
             </div>
           </div>
           <div class="row col-md-10 col-md-offset-1">
-            <?php echo form_open("product_c/newProduct");?>
+            <?php echo validation_errors(); ?>
+            <?php echo $this->session->flashdata("message"); ?>
+            <?php echo form_open_multipart("product_c/newProduct");?>
 
             <form class="form-horizontal">
               <fieldset>
@@ -116,14 +95,14 @@
                 <div class="form-group">
                   <label for="inputName" class="col-md-2 control-label">Product name</label>
                   <div class="col-md-10">
-                    <input type="text" class="form-control" id="Name" placeholder="Product name">
+                    <input type="text" class="form-control" id="Name" name="Name" placeholder="Product name">
                   </div>
                 </div>
 
                 <div class="form-group">
                   <label id="image" class="col-md-2 control-label">Product image</label>
                   <div class="col-md-10">
-                    <input type="file" class="form-control" id="Image">
+                    <input type="file" class="form-control" name = "Image" id="Image">
                   </div>
                 </div>
 
@@ -156,13 +135,13 @@
                   <div class="col-md-10">
                     <div class="radio">
                       <label>
-                        <input type="radio" name="optionsRadios" id="type" value=2 checked="" onclick="bid();">
+                        <input type="radio" id="type" name="type" value=2 checked="" onclick="bid();">
                         Bidding sale
                       </label>
                     </div>
                     <div class="radio">
                       <label>
-                        <input type="radio" name="optionsRadios" id="type" value=1 onclick="direct();">
+                        <input type="radio" id="type" name="type"value=1 onclick="direct();">
                         Direct sale
                       </label>
                     </div>
@@ -172,7 +151,7 @@
                 <div class="form-group">
                   <label id="update" class="col-md-2 control-label">Starting price</label>
                   <div class="col-md-10">
-                    <input type="text" class="form-control" id="Price" placeholder="Price">
+                    <input type="text" class="form-control" id="Price" name="Price" placeholder="Price">
                   </div>
                 </div>
 
@@ -180,14 +159,6 @@
                   <label for="package" class="col-md-2 control-label">Product packaging</label>
                   <div class="col-md-10">
                     <textarea class="form-control" rows="3" id="Packaging" placeholder="Product packaging"></textarea>
-                    
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label for="End_Datetime" class="col-md-2 control-label">Expiration Date</label>
-                  <div class="col-md-4">
-                    <input type="text" id="datepicker" class="hasDatepicker">
                     
                   </div>
                 </div>
@@ -251,14 +222,13 @@
 
 
     <script type="text/javascript">
-      function bid(){
-          document.getElementById("update").innerHTML = "Starting price";
-      }
-      function direct(){
-          document.getElementById("update").innerHTML = "Price";
-      }
-    </script>
-    
+            function bid(){
+                document.getElementById("update").innerHTML = "Starting price";
+            }
+            function direct(){
+                document.getElementById("update").innerHTML = "Price";
+            }
+        </script>
 
 
     <!-- Bootstrap core JavaScript
